--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Bankist</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- TOP NAVIGATION -->
@@ -37,7 +38,7 @@
             As of <span class="date">05/03/2037</span>
           </p>
         </div>
-        <p class="balance__value">0000€</p>
+        <p class="balance__value">1000€</p>
       </div>
 
       <!-- MOVEMENTS -->
@@ -114,5 +115,10 @@
     <!-- <footer>
       &copy; by Hariharan)
     </footer> -->
+
+    <form>
+      <input type="text" placeholder="Feedback" class="Feedback" />
+      <button>Submit</button>
+    </form>
   </body>
 </html>
