Stylling done: 1st version

--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@
     <!-- <footer>
       &copy; by Hariharan)
     </footer> -->
-
-    <form>
+  </body>
+</html>
+<!-- <form>
       <input type="text" placeholder="Feedback" class="Feedback" />
       <button>Submit</button>
     </form>
   </body>
-</html>
+</html> -->
