JS elements selected + forEach: diaplay 'movement'

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <!-- <footer>
       &copy; by Hariharan)
     </footer> -->
+    <script src="script.js"></script>
   </body>
 </html>
 <!-- <form>
